<resources>
    <string name="app_name">AirlinesBook</string>
    <string name="title_activity_search_flights">Search Flights</string>
    <string name="select_origin">Select origin?</string>
    <string name="select_destination">Select destination?</string>
    <string name="error_please_select_origin">Please select origin?</string>
    <string name="error_please_select_destination">Please select destination?</string>
    <string name="authenticating">Authenticating…</string>
    <string name="tap_to_dismiss">Tap to dismiss</string>
    <string name="_2h30m">2H30M</string>
    <string name="title_activity_flight_details">Map</string>
    <string name="select_airport">Select Airport</string>
    <string name="initial_airport_code_origin">AAR</string>
    <string name="initial_airport_code_dest">ABV</string>
    <string name="init_airport_origin">Aarhus</string>
    <string name="init_airport_dest">Abuja International</string>
    <string name="exception_message_generic">Generic error!</string>
    <string name="exception_message_no_connection">No Connection!</string>
    <string name="exception_message_auth_error">App is not authenticated!</string>
    <string name="exception_message_no_airports">No airports!</string>
    <string name="exception_message_no_flights">No flight schedules!</string>
    <string name="loading">Loading…</string>
    <string name="exception_message_no_schedules">No flight schedules!</string>
    <string name="no_airports">No airports</string>
</resources>
